--- a/style.css
+++ b/style.css
@@ -26,6 +26,10 @@ body {
   margin: auto;
 }
 
+a {
+  color: black;
+}
+
 .card {
   background-color: #fff;
   border-radius: 10px;
@@ -49,6 +53,7 @@ body {
 }
 
 .tag {
+  display: inline-block;
   background-color: #ccc;
   color: #fff;
   border-radius: 50px;
@@ -56,30 +61,6 @@ body {
   margin: 0;
   padding: 2px 10px;
   text-transform: uppercase;
-}
-
-.tag-teal {
-  background-color: #92d4e4;
-  font-weight: bold;
-}
-
-.tag-purple {
-  background-color: #3d1d94;
-  font-weight: bold;
-}
-
-.tag-pink {
-  background-color: #c62bcd;
-  font-weight: bold;
-}
-
-.tag-yellow {
-  background-color: #ffd700;
-  font-weight: bold;
-}
-
-.tag-red {
-  background-color: #8b4513;
   font-weight: bold;
 }
 
@@ -91,6 +72,7 @@ body {
   font-size: 14px;
   margin: 0 0 40px 0;
   font-weight: 500;
+  text-align: justify;
 }
 
 .user {
