--- a/Project/1. Palindrome Checker/style.css
+++ b/Project/1. Palindrome Checker/style.css
@@ -1,21 +1,72 @@
+html {
+  color-scheme: only dark !important;
+}
+
 body {
-  font-family: Arial, sans-serif;
+  font-family: Verdana, Geneva, Tahoma, sans-serif;
   text-align: center;
-  margin: 20px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  height: 100vh;
+  margin: 0;
+  color: black;
+}
+
+#converter-container {
+  text-align: center;
+  padding: 20px;
+  background-color: #ffffff;
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+  border-radius: 10px;
+  max-width: 400px;
+  width: 100%;
+  margin: 0 auto;
+}
+
+label {
+  font-weight: bold;
 }
 
 input {
-  padding: 10px;
-  font-size: 16px;
-  width: 80%;
-  box-sizing: border-box;
+  width: 250px;
+  padding: 8px;
   margin-bottom: 10px;
+  box-sizing: border-box;
+  font-family: inherit;
+}
+
+input:focus {
+  outline: 3px solid black;
 }
 
 button {
-  padding: 12px;
-  font-size: 16px;
+  background-color: #0a66c2;
+  border: 0;
+  border-radius: 100px;
+  color: #ffffff;
   cursor: pointer;
+  font-family: inherit;
+  font-size: 16px;
+  font-weight: bold;
+  padding: 8px 20px;
+  transition: background-color 0.167s cubic-bezier(0.4, 0, 0.2, 1) 0s, color 0.167s cubic-bezier(0.4, 0, 0.2, 1) 0s;
+}
+
+button:hover,
+button:focus {
+  background-color: #16437e;
+}
+
+button:active {
+  background: #09223b;
+  color: rgba(255, 255, 255, 0.7);
+}
+
+button:disabled {
+  cursor: not-allowed;
+  background: rgba(0, 0, 0, 0.08);
+  color: rgba(0, 0, 0, 0.3);
 }
 
 #result {
@@ -23,8 +74,8 @@ button {
   font-size: 18px;
 }
 
-@media (max-width: 600px) {
-  input {
-    width: 100%;
+@media screen and (max-width: 600px) {
+  #converter-container {
+    width: 300px;
   }
 }
