--- a/Project/2. Roman Numeral Converter/style.css
+++ b/Project/2. Roman Numeral Converter/style.css
@@ -1,43 +1,72 @@
+html {
+  color-scheme: only dark !important;
+}
+
 body {
-  font-family: Arial, sans-serif;
-  background-color: #f4f4f4;
+  font-family: Verdana, Geneva, Tahoma, sans-serif;
+  text-align: center;
   display: flex;
   align-items: center;
   justify-content: center;
   height: 100vh;
   margin: 0;
+  color: black;
 }
 
 #converter-container {
   text-align: center;
   padding: 20px;
-  background-color: #fff;
+  background-color: #ffffff;
   box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
-  border-radius: 8px;
-  max-width: 400px; /* Set a max-width for better mobile layout */
+  border-radius: 10px;
+  max-width: 450px;
   width: 100%;
   margin: 0 auto;
 }
 
+label {
+  font-weight: bold;
+}
+
 input {
-  width: calc(100% - 16px);
+  width: 250px;
   padding: 8px;
   margin-bottom: 10px;
   box-sizing: border-box;
+  font-family: inherit;
+}
+
+input:focus {
+  outline: 3px solid black;
 }
 
 button {
-  width: 100%;
-  padding: 10px;
-  background-color: #007bff;
-  color: #fff;
-  border: none;
-  border-radius: 4px;
+  background-color: #0a66c2;
+  border: 0;
+  border-radius: 100px;
+  color: #ffffff;
   cursor: pointer;
+  font-family: inherit;
+  font-size: 16px;
+  font-weight: bold;
+  padding: 8px 20px;
+  transition: background-color 0.167s cubic-bezier(0.4, 0, 0.2, 1) 0s, color 0.167s cubic-bezier(0.4, 0, 0.2, 1) 0s;
 }
 
-button:hover {
-  background-color: #0056b3;
+button:hover,
+button:focus {
+  background-color: #16437e;
+}
+
+button:active {
+  background: #09223b;
+  color: rgba(255, 255, 255, 0.7);
+}
+
+button:disabled {
+  cursor: not-allowed;
+  background: rgba(0, 0, 0, 0.08);
+  color: rgba(0, 0, 0, 0.3);
 }
 
 #output {
@@ -45,17 +74,8 @@ button:hover {
   font-size: 18px;
 }
 
-/* Responsive Styles for Mobile */
 @media screen and (max-width: 600px) {
   #converter-container {
-    padding: 10px;
-  }
-
-  input {
-    width: 100%;
-  }
-
-  button {
-    width: 100%;
+    width: 300px;
   }
 }
